course-app/k8s/deployment-recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
spec:
  replicas: 10
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: course-app
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
        - name: course-app
          image: nginx:1.29
          ports:
            - containerPort: 80
